// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaField rendering adds the error class if the error is set 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <textarea
    aria-describedby="test-id-error"
    className="TextAreaField__area TextAreaField--noresize TextAreaField--error"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    id="test-id-error"
    text="Error"
  />
</Layer>
`;

exports[`TextAreaField rendering does not add the resize class if the resize is true 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <textarea
    aria-describedby="test-id-helper"
    className="TextAreaField__area"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="test-id-helper"
  />
</Layer>
`;

exports[`TextAreaField rendering renders expected elements 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    optional={false}
    text="Label"
  />
  <textarea
    aria-describedby="test-id-helper"
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="test-id-helper"
    text="Helper text"
  />
</Layer>
`;

exports[`TextAreaField rendering renders expected elements when className is set 1`] = `
<Layer
  className="TextAreaField TestClass"
>
  <LabelLine
    htmlFor="test-id"
    text="Label"
  />
  <textarea
    aria-describedby="test-id-helper"
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="test-id-helper"
  />
</Layer>
`;

exports[`TextAreaField rendering renders expected elements when value is empty 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    htmlFor="test-id"
    optional={true}
    text="Label"
  />
  <textarea
    aria-describedby="test-id-helper"
    className="TextAreaField__area TextAreaField--noresize"
    id="test-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value=""
  />
  <FieldHelper
    id="test-id-helper"
  />
</Layer>
`;
